--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     </head>
     <body>
 
+        <div class="retangle-box-2">
+
+            <div class="retangulo-3">
+                <h1>
+                    você acertou o número !
+                </h1>
+            </div>
+
+        </div>
+
         <div class="retangle-box">
 
                 <div class="retangulo-2">
                     <h1>
-                        você acertou o número !
+                        parabens , você não é burro! quer tentar de novo ?
                     </h1>
                 </div>
 
