--- a/index.html
+++ b/index.html
@@ -1,30 +1,64 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="estilo.css">
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Barbearia Online</title>
+</head>
+<body>
+    <div class="header">
+        <h1>CARDÁPIO DE CORTES</h1>
+    </div>
 
-    </head>
-    <body>
-
-        <div class="retangle-box-2">
-
-            <div class="retangulo-3">
-                <h1>
-                    você acertou o número !
-                </h1>
-            </div>
-
-        </div>
-
-        <div class="retangle-box">
-
-                <div class="retangulo-2">
-                    <h1>
-                        parabens , você não é burro! quer tentar de novo ?
-                    </h1>
+    <div class="card-container">
+        <div class="card">
+            <img src="img/R.jfif" alt="Corte de cabelo 1" class="card-img">
+            <div class="card-content">
+                <h2>Corte Tradicional</h2>
+                <p>Um corte clássico, perfeito para qualquer ocasião.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    <button class="btn-instagram">Veja no Instagram</button>
                 </div>
-
+            </div>
         </div>
-        
-    </body>
-    <script src="script.js"></script>
+
+        <div class="card">
+            <img src="img/OIP (1).jfif" alt="Corte de cabelo 2" class="card-img">
+            <div class="card-content">
+                <h2>Corte Moderno</h2>
+                <p>Estilo contemporâneo para quem gosta de inovação.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    <button class="btn-instagram">Veja no Instagram</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="img/OIP.jfif" alt="Corte de cabelo 3" class="card-img">
+            <div class="card-content">
+                <h2>Corte para Barba</h2>
+                <p>Tratamento completo para barba e bigode.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    <button class="btn-instagram">Veja no Instagram</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
