--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
                 <p>Somente Navalha: R$20,00</p>
                 <p>Somente Máquina: R$10,00</p>
                 <div class="button-group">
-                    <button class="btn-whatsapp">Chame no WhatsApp</button>
-                    <button class="btn-instagram">Veja no Instagram</button>
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja no Instagram</button>
+                    </a>
                 </div>
+                
             </div>
         </div>
 
@@ -38,8 +43,12 @@
                 <p>Somente Navalha: R$20,00</p>
                 <p>Somente Máquina: R$10,00</p>
                 <div class="button-group">
-                    <button class="btn-whatsapp">Chame no WhatsApp</button>
-                    <button class="btn-instagram">Veja no Instagram</button>
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja no Instagram</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -54,8 +63,12 @@
                 <p>Somente Navalha: R$20,00</p>
                 <p>Somente Máquina: R$10,00</p>
                 <div class="button-group">
-                    <button class="btn-whatsapp">Chame no WhatsApp</button>
-                    <button class="btn-instagram">Veja no Instagram</button>
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja no Instagram</button>
+                    </a>
                 </div>
             </div>
         </div>
