--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Barbearia Online</title>
+    <link rel="icon" href="img/R.jfif" type="image/x-icon">
 </head>
 <body>
     <div class="header">
