--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Barbearia Online</title>
-    <link rel="icon" href="img/R.jfif" type="image/x-icon">
 </head>
 <body>
     <div class="header">
         <h1>CARDÁPIO DE CORTES</h1>
     </div>
-
     <div class="card-container">
         <div class="card">
             <img src="img/R.jfif" alt="Corte de cabelo 1" class="card-img">
@@ -27,13 +25,16 @@
                         <button class="btn-whatsapp">Chame no WhatsApp</button>
                     </a>
                     <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
-                        <button class="btn-instagram">Veja no Instagram</button>
+                        <button class="btn-instagram">Veja nosso Instagram</button>
                     </a>
                 </div>
-                
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
+                    </a>
+                </div>
             </div>
         </div>
-
         <div class="card">
             <img src="img/OIP (1).jfif" alt="Corte de cabelo 2" class="card-img">
             <div class="card-content">
@@ -48,17 +49,22 @@
                         <button class="btn-whatsapp">Chame no WhatsApp</button>
                     </a>
                     <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
-                        <button class="btn-instagram">Veja no Instagram</button>
+                        <button class="btn-instagram">Veja nosso Instagram</button>
+                    </a>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
                     </a>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="img/OIP.jfif" alt="Corte de cabelo 3" class="card-img">
+            <img src="img/R.jfif" alt="Corte de cabelo 2" class="card-img">
             <div class="card-content">
-                <h2>Corte para Barba</h2>
-                <p>Tratamento completo para barba e bigode.</p>
+                <h2>Corte Moderno</h2>
+                <p>Estilo contemporâneo para quem gosta de inovação.</p>
                 <h3>VALORES DE CORTES:</h3>
                 <p>Máquina e Navalha: R$12,00</p>
                 <p>Somente Navalha: R$20,00</p>
@@ -68,11 +74,96 @@
                         <button class="btn-whatsapp">Chame no WhatsApp</button>
                     </a>
                     <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
-                        <button class="btn-instagram">Veja no Instagram</button>
+                        <button class="btn-instagram">Veja nosso Instagram</button>
+                    </a>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="img/fundo.jfif" alt="Corte de cabelo 2" class="card-img">
+            <div class="card-content">
+                <h2>Corte Moderno</h2>
+                <p>Estilo contemporâneo para quem gosta de inovação.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja nosso Instagram</button>
+                    </a>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="img/OIP (1).jfif" alt="Corte de cabelo 2" class="card-img">
+            <div class="card-content">
+                <h2>Corte Moderno</h2>
+                <p>Estilo contemporâneo para quem gosta de inovação.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja nosso Instagram</button>
+                    </a>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="img/OIP (1).jfif" alt="Corte de cabelo 2" class="card-img">
+            <div class="card-content">
+                <h2>Corte Moderno</h2>
+                <p>Estilo contemporâneo para quem gosta de inovação.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja nosso Instagram</button>
+                    </a>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
                     </a>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="header" style="background-color: aliceblue; color: black;">
+        <h1>SISTEMA DESENVOLVIDO</h1>
+        <P>PELA COOPERATIVA i9</P>
+        <img src="img/person.jpg" alt="" style="height: 100px; width: 100px; border-radius: 90px;">
+    </div>
+
 </body>
 </html>
