--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="card-container">
         <div class="card">
-            <img src="img/R.jfif" alt="Corte de cabelo 1" class="card-img">
+            <img src="img/corte_1.jfif" alt="Corte de cabelo 1" class="card-img">
             <div class="card-content">
                 <h2>Corte Tradicional</h2>
                 <p>Um corte clássico, perfeito para qualquer ocasião.</p>
@@ -35,6 +35,56 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+            <img src="img/corte_2.jfif" alt="Corte de cabelo 2" class="card-img">
+            <div class="card-content">
+                <h2>Corte Moderno</h2>
+                <p>Estilo contemporâneo para quem gosta de inovação.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja nosso Instagram</button>
+                    </a>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="img/corte_3.jfif" alt="Corte de cabelo 2" class="card-img">
+            <div class="card-content">
+                <h2>Corte Moderno</h2>
+                <p>Estilo contemporâneo para quem gosta de inovação.</p>
+                <h3>VALORES DE CORTES:</h3>
+                <p>Máquina e Navalha: R$12,00</p>
+                <p>Somente Navalha: R$20,00</p>
+                <p>Somente Máquina: R$10,00</p>
+                <div class="button-group">
+                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
+                        <button class="btn-whatsapp">Chame no WhatsApp</button>
+                    </a>
+                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
+                        <button class="btn-instagram">Veja nosso Instagram</button>
+                    </a>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a href="https://reemias.github.io/trabalho/" target="_blank">
+                        <button class="btn-instagram">conheça nosso site</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <div class="card">
             <img src="img/OIP (1).jfif" alt="Corte de cabelo 2" class="card-img">
             <div class="card-content">
@@ -59,7 +109,6 @@
                 </div>
             </div>
         </div>
-
         <div class="card">
             <img src="img/R.jfif" alt="Corte de cabelo 2" class="card-img">
             <div class="card-content">
@@ -84,64 +133,15 @@
                 </div>
             </div>
         </div>
-
         <div class="card">
-            <img src="img/fundo.jfif" alt="Corte de cabelo 2" class="card-img">
+            <img src="img/person.jpg" alt="Corte de cabelo 2" class="card-img">
             <div class="card-content">
-                <h2>Corte Moderno</h2>
-                <p>Estilo contemporâneo para quem gosta de inovação.</p>
-                <h3>VALORES DE CORTES:</h3>
-                <p>Máquina e Navalha: R$12,00</p>
-                <p>Somente Navalha: R$20,00</p>
-                <p>Somente Máquina: R$10,00</p>
-                <div class="button-group">
-                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
-                        <button class="btn-whatsapp">Chame no WhatsApp</button>
-                    </a>
-                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
-                        <button class="btn-instagram">Veja nosso Instagram</button>
-                    </a>
-                </div>
-                <div style="margin-top: 10px;">
-                    <a href="https://reemias.github.io/trabalho/" target="_blank">
-                        <button class="btn-instagram">conheça nosso site</button>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/OIP (1).jfif" alt="Corte de cabelo 2" class="card-img">
-            <div class="card-content">
-                <h2>Corte Moderno</h2>
-                <p>Estilo contemporâneo para quem gosta de inovação.</p>
-                <h3>VALORES DE CORTES:</h3>
-                <p>Máquina e Navalha: R$12,00</p>
-                <p>Somente Navalha: R$20,00</p>
-                <p>Somente Máquina: R$10,00</p>
-                <div class="button-group">
-                    <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
-                        <button class="btn-whatsapp">Chame no WhatsApp</button>
-                    </a>
-                    <a href="https://www.instagram.com/COOPERI9_/" target="_blank">
-                        <button class="btn-instagram">Veja nosso Instagram</button>
-                    </a>
-                </div>
-                <div style="margin-top: 10px;">
-                    <a href="https://reemias.github.io/trabalho/" target="_blank">
-                        <button class="btn-instagram">conheça nosso site</button>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/OIP (1).jfif" alt="Corte de cabelo 2" class="card-img">
-            <div class="card-content">
-                <h2>Corte Moderno</h2>
-                <p>Estilo contemporâneo para quem gosta de inovação.</p>
-                <h3>VALORES DE CORTES:</h3>
-                <p>Máquina e Navalha: R$12,00</p>
-                <p>Somente Navalha: R$20,00</p>
-                <p>Somente Máquina: R$10,00</p>
+                <h2>cooperativa i9</h2>
+                <p>ESSE SISTEMA FOI DESENVOLVIDO POR NÓS</p>
+                <h3>VALORES DE CARDÁPIO :</h3>
+                <p>BÁSICO : R$100,00</p>
+                <p>MODELO BÁSICO COM PERSONALIZAÇÃO: R$170,00</p>
+                <p>CARDAPIO COM OUTRAS PAGINAS A MAIS PARA SEU NEGÓCIO: R$300,00</p>
                 <div class="button-group">
                     <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
                         <button class="btn-whatsapp">Chame no WhatsApp</button>
