--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                         <img src="img/person.jpg" alt="Corte de cabelo 2" class="card-img">
                         <div class="card-content">
                             <h2>cooperativa i9</h2>
-                            <p>ESSE SISTEMA FOI DESENVOLVIDO POR NÓS</p>
-                            <h3>VALORES DE CARDÁPIO :</h3>
-                            <p>BÁSICO : R$100,00</p>
-                            <p>MODELO BÁSICO COM PERSONALIZAÇÃO: R$170,00</p>
-                            <p>CARDAPIO COM OUTRAS PAGINAS A MAIS PARA SEU NEGÓCIO: R$300,00</p>
+                            <p>ESSE SISTEMA FOI DESENVOLVIDO PELA I9</p>
+                            <h3>TIPOS DE CARDÁPIOS DISPONIVEIS :</h3>
+                            <p> BÁSICO PERSONALIZADO </p>
+                            <p> MÉDIO PERSONALIZADO</p>
+                            <p> GOLD PREMIUM PERSONALIZADO ( com a liberdade de criar mais de uma pagina ) </p>
                             <div class="button-group">
                                 <a href="https://api.whatsapp.com/send/?phone=5582988873225&text&type=phone_number&app_absent=0" target="_blank">
                                     <button class="btn-whatsapp">Chame no WhatsApp</button>
